# libcafemixer

./: .build.yml  .travis.yml  AUTHORS  COPYING  Makefile.am  NEWS  README  autogen.sh  configure.ac  index.html  libcafemixer.pot  makepot  output_6cf8c94cb7ddd5d907b8f74b218d39bc54362915
.tx/: config
2022-04-10-123523-9640-cppcheck@e2ae8b6e9598_githubActions/: 0.html  10.html  2.html  output_e2ae8b6e95987a60f5cf4ed372e6b6df62fffe86
2022-04-10-124812-5956-cppcheck@90254e4661ba_master/: 3.html  4.html  7.html  commitmsg  index.html  output_90254e4661baef686735fe1eb5c9051f446bfd0a  stats.html
2022-04-10-125149-7397-cppcheck@a0a6f09e5ecd_master/: 8.html  output_a0a6f09e5ecd7dcd892aaffb77f449df15aaf8e6
2022-04-10-141108-1684-cppcheck@2c2975ff4c4d_variableScope/: output_2c2975ff4c4d216f63a236773d47e899d087fb46  stats.html
2022-04-10-141630-6435-cppcheck@5b8f45b549b7_master/: 9.html  commitmsg  index.html  output_5b8f45b549b7b437e0ec10407b53f0d514bb47fe
2022-04-10-142251-7484-cppcheck@c93d91b69152_variableScope/: 1.html  4.html  5.html  commitmsg  output_c93d91b69152b1bd861433ed1681617584dfb0e7
2022-04-10-142921-5608-cppcheck@4c357a1ca080_master/: 6.html  index.html  output_4c357a1ca080f60757416fc873b58d0ecb02f4dc  stats.html
2022-06-26-084532-4451-cppcheck@1ee8cdb0a344_master/: 11.html  4.html  8.html  commitmsg  index.html  output_1ee8cdb0a344db43d3d8f91882da18e00921d85c  stats.html
2022-06-26-085140-4775-cppcheck@66d5d3a5a53f_master/: 0.html  12.html  2.html  5.html  output_66d5d3a5a53f3d290d7b9202850325b8aa12a62a
2022-06-30-185402-8628-cppcheck@5697d092a6b7_master/: 1.html  commitmsg  output_5697d092a6b7c53cdf2f3dd95880d17fa56ebf91
2022-06-30-185844-7796-cppcheck@aaec10091517_master/: 10.html  3.html  6.html  7.html  9.html  commitmsg  output_aaec100915172eda9827afa067943fa59b4f4df7
2022-08-28-173508-5021-cppcheck@5416695a4dde_master/: 0.html  1.html  10.html  11.html  12.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html  commitmsg  index.html  output_5416695a4dde0d4dfcc6454f50871d195341c0dc  stats.html
2022-12-30-001656-7234-cppcheck@4a456d714649_updateci/: 0.html  10.html  11.html  13.html  16.html  18.html  2.html  22.html  24.html  29.html  3.html  33.html  4.html  7.html  9.html  output_4a456d71464939f2ffae51d2260cf7a61bfc5d0b
2022-12-30-002323-1528-cppcheck@4a456d714649_master/: 1.html  12.html  14.html  15.html  17.html  19.html  20.html  23.html  25.html  26.html  30.html  8.html  output_4a456d71464939f2ffae51d2260cf7a61bfc5d0b  stats.html
2022-12-31-023501-0839-cppcheck@e8d245b88f5b_master/: 21.html  27.html  28.html  31.html  32.html  5.html  6.html  index.html  output_e8d245b88f5b32789151ffaf36bb490c10932de6
2024-08-05-140132-2016-cppcheck@6cf8c94cb7dd_master/: 0.html  1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  2.html  20.html  21.html  22.html  23.html  24.html  25.html  26.html  27.html  28.html  29.html  3.html  30.html  31.html  32.html  33.html  34.html  35.html  36.html  37.html  38.html  39.html  4.html  40.html  41.html  42.html  43.html  5.html  (+6 more)
2025-02-07-120234-12031-1@67e7e530df5d_devel/: index.html  output_67e7e530df5deb3ee9ce92c4e868cdae36e33b8b  report-1d800a.html
2025-02-07-120436-12031-1@1d690c827d47_devel/: index.html  report-1d800a.html
2025-02-07-120559-5257-cppcheck@1d690c827d47_devel/: 10.html  23.html  index.html  output_1d690c827d477981834e745a5e93ec7fdadf462a
2025-02-07-120711-12031-1@3eb0e81d2bd8_devel/: index.html  report-1d800a.html
2025-02-07-120827-12031-1@e261c02d82cb_devel/: commitmsg  index.html  report-1d800a.html
2025-02-07-120832-0975-cppcheck@3eb0e81d2bd8_devel/: 29.html  33.html  output_3eb0e81d2bd8b21689dc3a39c6a9656880d34b55
2025-02-07-120946-9334-cppcheck@e261c02d82cb_devel/: 11.html  16.html  19.html  20.html  24.html  32.html  36.html  7.html  output_e261c02d82cb549f834ab991b1796f2753503330
2025-02-07-122002-12031-1@e261c02d82cb_master/: index.html  report-1d800a.html
2025-02-07-122122-5946-cppcheck@e261c02d82cb_master/: 1.html  18.html  22.html  26.html  4.html  40.html  9.html  output_e261c02d82cb549f834ab991b1796f2753503330
2025-02-07-122203-12031-1@b2fe2888fca5_devel/: commitmsg  index.html  report-1d800a.html
2025-02-07-122325-1077-cppcheck@b2fe2888fca5_devel/: 13.html  14.html  28.html  34.html  39.html  6.html  output_b2fe2888fca5a3283a079d64720559ab87de3470
2025-02-07-122515-12031-1@658bf17d5bd3_devel/: index.html  report-1d800a.html
2025-02-07-122634-5177-cppcheck@658bf17d5bd3_devel/: 41.html  8.html  index.html  output_658bf17d5bd3657ada3af9a5e1fd3181a9091e22
2025-02-07-123517-12031-1@b979b28607ce_devel/: index.html  report-1d800a.html
backends/null/: Makefile.am  null-backend.c  null-backend.h
backends/oss/: Makefile.am  oss-backend.c  oss-backend.h  oss-device.c  oss-device.h  oss-stream-control.c  oss-stream-control.h  oss-stream.c  oss-stream.h  oss-switch-option.c  oss-switch-option.h  oss-switch.c  oss-switch.h
examples/: Makefile.am  monitor.c
libcafemixer/: Makefile.am  cafemixer-app-info-private.h  cafemixer-app-info.c  cafemixer-app-info.h  cafemixer-backend-module.c  cafemixer-backend-module.h  cafemixer-backend.c  cafemixer-backend.h  cafemixer-context.c  cafemixer-context.h  cafemixer-device-switch.c  cafemixer-device-switch.h  cafemixer-device.c  cafemixer-device.h  cafemixer-enum-types.c  cafemixer-enum-types.h  cafemixer-enums.h  cafemixer-private.h  cafemixer-stored-control.c  cafemixer-stored-control.h  cafemixer-stream-control-private.h  cafemixer-stream-control.c  cafemixer-stream-control.h  cafemixer-stream-private.h  cafemixer-stream-switch.c  cafemixer-stream-switch.h  cafemixer-stream-toggle.c  cafemixer-stream-toggle.h  cafemixer-stream.c  cafemixer-stream.h  cafemixer-switch-option-private.h  cafemixer-switch-option.c  cafemixer-switch-option.h  cafemixer-switch-private.h  cafemixer-switch.c  cafemixer-switch.h  cafemixer-types.h  cafemixer-version.h  cafemixer.c  cafemixer.h
(+219 files in other folders)
